--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 NEXT_PUBLIC_API_BASE_URL=https://api.jikan.moe/v4
+GITHUB_ID=b7f7d0b155775e63a34f
+GITHUB_SECRET=f1242cd7cfb45d76d93f38929feb36bfcc58ebff
+
+NEXTAUTH_SECRET=rahasia123
